@@ -1,12 +1,10 @@
 package be.cytomine.appengine.utils;
 
-import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import be.cytomine.appengine.dto.inputs.task.GenericParameterCollectionItemProvision;
 import be.cytomine.appengine.dto.inputs.task.ParameterType;
@@ -35,11 +33,11 @@ public class TaskTestsUtils {
                 .map(entity -> {
                     try {
                         return (String) entity.getClass().getMethod("getName").invoke(entity);
-                    } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
+                    } catch (Exception e) {
                         throw new RuntimeException(e);
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static <E extends BaseEntity> boolean areSetEquals(Set<E> expected, List<E> actual) {
@@ -209,11 +207,11 @@ public class TaskTestsUtils {
 
         switch (type) {
             case "boolean":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.BOOLEAN);
+                provision.setType(ParameterType.BOOLEAN);
                 provision.setValue(Boolean.parseBoolean(value));
                 break;
             case "integer":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.INTEGER);
+                provision.setType(ParameterType.INTEGER);
                 provision.setValue(Integer.parseInt(value));
                 break;
             case "number":
@@ -221,27 +219,27 @@ public class TaskTestsUtils {
                 provision.setValue(Double.parseDouble(value));
                 break;
             case "string":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.STRING);
+                provision.setType(ParameterType.STRING);
                 provision.setValue(value);
                 break;
             case "enumeration":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.ENUMERATION);
+                provision.setType(ParameterType.ENUMERATION);
                 provision.setValue(value);
                 break;
             case "geometry":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.GEOMETRY);
+                provision.setType(ParameterType.GEOMETRY);
                 provision.setValue(value);
                 break;
             case "image":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.IMAGE);
+                provision.setType(ParameterType.IMAGE);
                 provision.setValue(value.getBytes());
                 break;
             case "wsi":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.WSI);
+                provision.setType(ParameterType.WSI);
                 provision.setValue(value.getBytes());
                 break;
             case "file":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.FILE);
+                provision.setType(ParameterType.FILE);
                 provision.setValue(value.getBytes());
                 break;
             default:
